--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,32 +2,56 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/drawLine"
-        android:orderInCategory="100"
-        android:title="绘制线"/>
-    <item
-    android:id="@+id/drawPoint"
-    android:orderInCategory="101"
-    android:title="绘制点"/>
-    <item
-        android:id="@+id/drawCustomPoint"
-        android:orderInCategory="100"
-        android:title="绘制自定义点"/>
+
+
 
     <item
-        android:id="@+id/drawDottedLine"
-        android:orderInCategory="100"
-        android:title="绘制虚线"/>
-    <item
-        android:id="@+id/drawColorLine"
-        android:orderInCategory="100"
-        android:title="绘制变色线"/>
+        android:id="@+id/point"
+        android:orderInCategory="102"
+        android:title="点操作">
+
+        <menu>
+            <item
+                android:id="@+id/drawPoint"
+                android:orderInCategory="102"
+                android:title="绘制点"/>
+            <item
+                android:id="@+id/drawCustomPoint"
+                android:orderInCategory="101"
+                android:title="绘制自定义点"/>
+        </menu>
+    </item>
+
+
 
     <item
-        android:id="@+id/drawClickLine"
-        android:orderInCategory="100"
-        android:title="点击线事件"/>
+        android:id="@+id/line"
+        android:orderInCategory="102"
+        android:title="线操作">
+        <menu>
+            <item
+                android:id="@+id/drawLine"
+                android:orderInCategory="101"
+                android:title="绘制线"/>
+            <item
+                android:id="@+id/drawDottedLine"
+                android:orderInCategory="101"
+                android:title="绘制虚线"/>
+            <item
+                android:id="@+id/drawColorLine"
+                android:orderInCategory="101"
+                android:title="绘制变色线"/>
+
+            <item
+                android:id="@+id/drawClickLine"
+                android:orderInCategory="101"
+                android:title="点击线事件"/>
+        </menu>
+    </item>
+
+
+
+
 
 
 </menu>
