实验12完成 批量添加和批量删除overlay

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -145,6 +145,16 @@
                 android:orderInCategory="100"
                 android:title="@string/customHeatMap"
                 app:showAsAction="never" />
+            <item
+                android:id="@+id/batchAdd"
+                android:orderInCategory="100"
+                android:title="@string/batchAdd"
+                app:showAsAction="never" />
+            <item
+                android:id="@+id/batchDelete"
+                android:orderInCategory="100"
+                android:title="@string/batchDelete"
+                app:showAsAction="never" />
         </menu>
 
     </item>
